--- a/index.html
+++ b/index.html
@@ -2,19 +2,24 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Unity WebGL Player | Vapor Trails</title>
-    <link rel="shortcut icon" href="TemplateData/favicon.ico">
-    <link rel="stylesheet" href="TemplateData/style.css">
-    <script src="TemplateData/UnityProgress.js"></script>
-    <script src="Build/UnityLoader.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <script src="UnityProgress.js"></script>
+    <script src="UnityLoader.js"></script>
     <script>
-      var unityInstance = UnityLoader.instantiate("unityContainer", "Build/Vapor Trails.json", {onProgress: UnityProgress});
+      var unityInstance = UnityLoader.instantiate("unityContainer", "VaporTrails.json", {onProgress: UnityProgress});
     </script>
   </head>
   <body>
     <div class="webgl-content">
-      <div id="unityContainer" style="width: 960px; height: 600px; padding: 0px; margin: 0px; border: 0px; position: relative; background: rgb(75, 35, 77);"><canvas id="#canvas" style="width: 100%; height: 100%; cursor: default;" width="960" height="600"></canvas><div class="logo Dark" style="display: none;"></div><div class="progress Dark" style="display: none;"><div class="empty" style="width: 0%;"></div><div class="full" style="width: 100%;"></div></div></div>
-      
+<div id="unityContainer" style="width: 960px; height: 600px; padding: 0px; margin: 0px; border: 0px; position: relative; background: rgb(75, 35, 77);">
+   <canvas id="#canvas" style="width: 100%; height: 100%; cursor: default;" width="960" height="600"></canvas>
+   <div class="logo Dark" style="display: none;"></div>
+   <div class="progress Dark" style="display: none;">
+      <div class="empty" style="width: 0%;"></div>
+      <div class="full" style="width: 100%;"></div>
+   </div>
+</div>      
     </div>
   
 
-<script src="blob:https://v6p9d9t4.ssl.hwcdn.net/4507bec8-6ab1-4784-a80d-8f2c813ab82d" id="67389cc1fc287ce136907f4cd953149d"></script></body></html>
+</body></html>
